fixes hex text not being center in div on mobile

--- a/styles/app.custom.scss
+++ b/styles/app.custom.scss
@@ -1,19 +1,4 @@
 // ---
-// HELPERS
-// -------------------------
-.is-ninesixty {
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-.is-vertical-center {
-  justify-content: center;
-  align-items: center;
-}
-
-
-
-// ---
 // SWATCHES
 // -------------------------
 .swatch {
@@ -33,22 +18,23 @@
   padding-top: 50px;
   font-size: 20px;
 
+  &:hover {
+    bottom: -25px;
+  }
   
 }
 
-.swatch:hover {
-  bottom: -25px;
-}
 
 @media screen and (max-width:768px){
   .swatch {
-    font-size: 18px;
+    font-size: 25px;
     border-radius: 10px;
-    height:50px;
+    height:100px;
+    padding: 0;
     bottom: 0;
     margin: 0 auto;
-    padding-top: 30px;
-    margin-bottom: 20px;
+    line-height: 100px;
+    white-space: nowrap;
   }
 }
 
